--- a/RearEstate/api/package.json
+++ b/RearEstate/api/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.7.0",
     "nodemon": "^3.1.0",
     "openssl": "^2.0.0",
     "openssl-nodejs": "^1.0.5",
